<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expolis_sensor_database"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/expolis_sensor_database_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_expolis_sensor_database_host_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:minEms="10"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toStartOf="@+id/expolis_sensor_database_port"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/expolis_sensor_database_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_expolis_sensor_database_port_number"
            android:importantForAutofill="no"
            android:inputType="none|number"
            android:maxEms="6"
            android:minHeight="48dp"
            android:minEms="4"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toBottomOf="@+id/expolis_sensor_database_host"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expolis_sensor_database_host"
            app:layout_constraintTop_toTopOf="@+id/expolis_sensor_database_host" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/expolis_mqtt_broker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expolis_sensor_database_host" />

        <RadioButton
            android:id="@+id/userDefinedMQTTBrokerRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/expolis_mqtt_broker_host"
            app:layout_constraintEnd_toStartOf="@+id/expolis_mqtt_broker_host"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/expolis_mqtt_broker_host" />

        <EditText
            android:id="@+id/expolis_mqtt_broker_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_expolis_mqtt_broker_host_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:minEms="10"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toStartOf="@+id/expolis_mqtt_broker_port"
            app:layout_constraintStart_toEndOf="@+id/userDefinedMQTTBrokerRadioButton"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <EditText
            android:id="@+id/expolis_mqtt_broker_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_expolis_mqtt_broker_port_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxEms="6"
            android:minHeight="48dp"
            android:minEms="4"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toBottomOf="@+id/expolis_mqtt_broker_host"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expolis_mqtt_broker_host"
            app:layout_constraintTop_toTopOf="@+id/expolis_mqtt_broker_host" />

        <RadioButton
            android:id="@+id/expolis_sensor_node_mqtt_broker_RB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            app:layout_constraintStart_toStartOf="@+id/userDefinedMQTTBrokerRadioButton"
            app:layout_constraintTop_toBottomOf="@+id/userDefinedMQTTBrokerRadioButton" />

        <TextView
            android:id="@+id/sensor_node_box_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/sensor_node_box"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintBottom_toBottomOf="@+id/expolis_sensor_node_mqtt_broker_RB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expolis_sensor_node_mqtt_broker_RB"
            app:layout_constraintTop_toTopOf="@+id/expolis_sensor_node_mqtt_broker_RB" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/expolis_route_planner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expolis_sensor_node_mqtt_broker_RB" />

        <EditText
            android:id="@+id/expolis_route_planner_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_server_host_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toStartOf="@+id/expolis_route_planner_port"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView7" />

        <EditText
            android:id="@+id/expolis_route_planner_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/enter_server_port_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxEms="6"
            android:minHeight="48dp"
            android:minEms="4"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toBottomOf="@+id/expolis_route_planner_host"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expolis_route_planner_host"
            app:layout_constraintTop_toTopOf="@+id/expolis_route_planner_host" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/relaunch_app_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/retry_expolis_mobile_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
