<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plots.chart.EditChartPlotPropertiesFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:singleLine="false"
        android:text="@string/info_chart_plot_overview"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5">

        <TextView
            android:id="@+id/showTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:labelFor="@id/statistics_spinner"
            android:text="@string/show_statistics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/statistics_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/showTextView"
            app:layout_constraintStart_toEndOf="@id/showTextView"
            app:layout_constraintTop_toTopOf="@id/showTextView" />

        <ImageButton
            android:id="@+id/infoShowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_od_info"
            app:layout_constraintBottom_toBottomOf="@id/statistics_spinner"
            app:layout_constraintStart_toEndOf="@id/statistics_spinner"
            app:layout_constraintTop_toTopOf="@id/statistics_spinner"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/dataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:labelFor="@id/data_spinner"
            android:text="@string/of_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/showTextView" />

        <Spinner
            android:id="@+id/data_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/dataTextView"
            app:layout_constraintStart_toEndOf="@id/dataTextView"
            app:layout_constraintTop_toTopOf="@id/dataTextView" />

        <TextView
            android:id="@+id/fromDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/date_from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataTextView" />

        <EditText
            android:id="@+id/fromDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:hint="@string/tap_to_select_from_date"
            android:importantForAutofill="no"
            android:inputType="none"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="@id/fromDateTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fromDateTextView"
            app:layout_constraintTop_toTopOf="@id/fromDateTextView"
            tools:ignore="TextFields,Deprecated" />

        <TextView
            android:id="@+id/toDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/date_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fromDateTextView" />

        <EditText
            android:id="@+id/toDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tap_to_select_to_date"
            android:importantForAutofill="no"
            android:inputType="none"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="@id/toDateTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/toDateTextView"
            app:layout_constraintTop_toTopOf="@id/toDateTextView"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/infoLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/area_to_analyse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toDateTextView" />

        <ImageButton
            android:id="@+id/infoLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_od_info"
            tools:ignore="ContentDescription"
            app:layout_constraintBottom_toBottomOf="@id/infoLocationTextView"
            app:layout_constraintStart_toEndOf="@id/infoLocationTextView"
            app:layout_constraintTop_toTopOf="@id/infoLocationTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <org.osmdroid.views.MapView
        android:id="@+id/locationMapView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/locationDetailsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

    <Button
        android:id="@+id/view_graph_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/view_plot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/locationDetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view_graph_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>